fix swagger register overtime
